<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_parchment"
    tools:context=".MainGameActivity" >

    
    <TableRow
            android:id="@+id/tableRowScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="1dp" >

            <TextView
        android:id="@+id/score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/score_text" />
            
                <TextView
        android:id="@+id/current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_score" />
        
     </TableRow>
    
    <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp" 
            android:layout_marginBottom="8dp">

            <TextView
        android:id="@+id/levelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/level_name_text" />
            
                <TextView
        android:id="@+id/levelInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="" />
        
     </TableRow>
     
    <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="1dp">

            <TextView
        android:id="@+id/healthHeaderHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/health_text_label" />
            
                <TextView
        android:id="@+id/healthInfoHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
        

          
        
     </TableRow>
     
    <TableRow
            android:id="@+id/tableRowSan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp" 
            android:layout_marginBottom="1dp">
     
    <TextView
        android:id="@+id/sanityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sanity_text_label" />
            
                <TextView
        android:id="@+id/sanityInfoHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
        
     </TableRow>
     
    <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp" 
            android:layout_marginBottom="10dp">

            <TextView
        android:id="@+id/currentActionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/current_action_text_label" />
            
                <TextView
        android:id="@+id/currentActionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_action_text_start_text" />
        
     </TableRow>

    <TextView
        android:id="@+id/creatureName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp" 
        android:layout_marginBottom="1dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

           
                <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp" 
            android:layout_marginBottom="1dp">
     
     <TextView
        android:id="@+id/healthHeaderCreature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/health_text_enemy_label" />
            
                <TextView
        android:id="@+id/healthInfoCreature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
        
     </TableRow>
     
  
     
      <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp" 
            android:layout_marginBottom="8dp">

            <TextView
        android:id="@+id/currentEnemyActionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/current_enemy_action_text_label" />
            
                <TextView
        android:id="@+id/currentEnemyActionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_enemy_action_text_start_text" />
        
     </TableRow>

     <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp" >
                
     <ImageView
         android:id="@+id/hpImageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
         android:src="@drawable/hand_gun_image" />
     
     <ImageView
         android:id="@+id/creatureImageView"
         android:layout_width="280dp"
        android:layout_height="280dp"
         android:src="@drawable/ic_launcher" />
     
      </TableRow>

     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
     <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" 
            android:layout_marginBottom="50dp">

            <TextView
        android:id="@+id/actionDescriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/action_name_text" />
            
                <TextView
        android:id="@+id/actionDescriptionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
        
     </TableRow>

     <Button
         android:id="@+id/commit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/commit_action_button_text" />

</TableLayout>
